# Autonomous-System-Platform-final-project

./: .gitmodules  README.md
uav_controller/: CMakeLists.txt  package.xml
uav_controller/config/: fast_params.yaml  stable_params.yaml
uav_controller/launch/: uav.launch.py
uav_controller/path/: marker_detections.csv  rendezvous.csv  uav_path.csv
uav_controller/src/: aruco_uav.cpp  uav_controller.cpp
ugv_controller/: CMakeLists.txt  package.xml
ugv_controller/config/: path_follower_params.yaml
ugv_controller/launch/: path_follower.launch.py
ugv_controller/path/: mission.csv
ugv_controller/src/: path_follower_node.cpp
